[package]
name = "srvr"
version = "0.1.1"
description = "Simple HTTP file server"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Tim <me@justim.net>"]
repository = "https://github.com/justim/srvr"
homepage = "https://github.com/justim/srvr"
documentation = "https://github.com/justim/srvr"
rust-version = "1.85"
exclude = ["Dockerfile"]

[dependencies]
anyhow = "1.0.97"
axum = { version = "0.8.3", features = ["http2"] }
axum-extra = { version = "0.10.1", features = ["async-read-body", "typed-header"] }
clap = { version = "4.5.35", features = ["derive"] }
clap-verbosity-flag = { version = "3.0.2", default-features = false, features = ["tracing"] }
clap_complete = "4.5.47"
httpdate = "1.0.3"
humantime = "2.2.0"
mime = "0.3.17"
mime_guess = "2.0.5"
percent-encoding = "2.3.1"
thiserror = "2.0.12"
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = { version = "0.7.14", default-features = false, features = ["io"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.2", features = ["fs", "trace", "compression-full", "timeout"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
