[package]
name = "srvr"
version = "0.1.2"
description = "Simple HTTP file server"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Tim <me@justim.net>"]
repository = "https://github.com/justim/srvr"
homepage = "https://github.com/justim/srvr"
documentation = "https://github.com/justim/srvr"
rust-version = "1.85"
exclude = ["Dockerfile"]

[dependencies]
anyhow = { version = "1.0.98", default-features = false }
axum = { version = "0.8.4", default-features = false, features = ["http1", "http2", "tokio", "tracing"] }
axum-extra = { version = "0.10.1", default-features = false, features = ["async-read-body", "typed-header"] }
clap = { version = "4.5.39", default-features = false, features = ["color", "derive", "help", "suggestions"] }
clap-verbosity-flag = { version = "3.0.3", default-features = false, features = ["tracing"] }
clap_complete = { version = "4.5.52", default-features = false }
httpdate = { version = "1.0.3", default-features = false }
humantime = { version = "2.2.0", default-features = false }
mime = { version = "0.3.17", default-features = false }
mime_guess = { version = "2.0.5", default-features = false }
percent-encoding = { version = "2.3.1", default-features = false }
tokio = { version = "1.45.1", default-features = false, features = ["rt-multi-thread", "signal"] }
tokio-util = { version = "0.7.15", default-features = false, features = ["io"] }
tower = { version = "0.5.2", default-features = false, features = ["util"] }
tower-http = { version = "0.6.6", default-features = false, features = ["fs", "trace", "timeout"] }
tracing = { version = "0.1.41", default-features = false }
tracing-subscriber = { version = "0.3.20", default-features = false, features = ["ansi", "env-filter", "fmt"] }
